# linkshortnr

./: .gitignore  README.md  alembic.ini  docker-compose.yaml  example.env  index.html  pyproject.toml  start.py
alembic/: env.py
alembic/versions/: 5bd971e1d996_init.py
src/: exceptions.py  main.py  service.py  shortener.py
src/database/: crud.py  db.py
src/shortner/: router.py  service.py
static/: index.html
tests/: test_service.py
